# ChangeLog for net-libs/libssh
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libssh/ChangeLog,v 1.125 2015/04/02 16:22:14 jer Exp $

  02 Apr 2015; Jeroen Roovers <jer@gentoo.org> libssh-0.6.4.ebuild:
  Stable for HPPA (bug #538798).

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> libssh-0.6.4.ebuild:
  add arm64 support, tested on A53 board

  18 Feb 2015; Jeroen Roovers <jer@gentoo.org> -libssh-0.6.3.ebuild,
  -libssh-0.6.3-r1.ebuild:
  Old.

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for ppc64, wrt bug #533366

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for ppc, wrt bug #533366

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for x86, wrt bug #533366

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.4.ebuild:
  Stable for amd64, wrt bug #533366

  30 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> libssh-0.6.4.ebuild:
  Fixed compilation with libgcrypt (bug #533424).

*libssh-0.6.4 (23 Dec 2014)

  23 Dec 2014; Jeroen Roovers <jer@gentoo.org> +libssh-0.6.4.ebuild:
  Version bump (bug #533366).

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.3-r1.ebuild:
  Stable for ppc64, wrt bug #526074

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.3-r1.ebuild:
  Stable for ppc, wrt bug #526074

  25 Nov 2014; Agostino Sarubbo <ago@gentoo.org> libssh-0.6.3-r1.ebuild:
  Stable for x86, wrt bug #526074

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> libssh-0.6.3-r1.ebuild:
  amd64 stable wrt bug #526074

  04 Aug 2014; Tobias Klausmann <klausman@gentoo.org> libssh-0.6.3-r1.ebuild:
  Keyworded on alpha, bug 510340

  18 Jul 2014; Jeroen Roovers <jer@gentoo.org> files/libssh-0.5.0-tests.patch,
  libssh-0.6.3-r1.ebuild, metadata.xml:
  Remove short <longdescription>. Clean up patch.

  07 Jul 2014; Jeroen Roovers <jer@gentoo.org> -libssh-0.5.5.ebuild,