@@ -4,14 +4,27 @@ Hash: SHA256
 AUX libssh-0.5.0-tests.patch 446 SHA256 d23cf31e1fe6c0e1b1ee31f88a74b1a02386d75ab72063a39fea8c467dfc3383 SHA512 e751ac1c3749ecbd8ee2f960ad09e861763cbdb9bccc7c95ae27ca4768e8c9ae5ab55342151a2799f8f937e63a8729bff6f04cec166bb9830b99f8f690da4825 WHIRLPOOL 55031d07f02fe43f32391ae20e78b5a689df342e96d0feb2a03f674251b743ae502955e9d1e93539ca4f25f2eb151d8d02fb594e509978356c4bae90fcdca695
 DIST libssh-0.6.4-libgcrypt_build_fix.patch 1660 SHA256 729e6c4aeacb0c066906b320c426b624b3f437b456969e1830d367800016c304 SHA512 90d4d371463ef6a0669fe363c2750fa1320586b14e1dcaf1d7e6789d2e2732fc8dcbe70c11b4a81675c443c30465e6a7b056a40192ff6245f59308bab760b216 WHIRLPOOL 6ee0dce20b262a758b921483151f12fc483c8370c4eeb2c99c6fd94a44a55a54af997a3ab4dfad99ab714a6d6602392843e0bdb5383180d2d84a947a457a88eb
 DIST libssh-0.6.4.tar.gz 381835 SHA256 7e3205e2e95bf35b23b83a6485a7d59abe7c7546d01b728f691cf0c374216b52 SHA512 02c1879d7afed9cc8404366c343ea770e97fcdcc7cc467f15b762b2c5724399de3efe69fdf6ee86a607c0f4d2337586f34150b9e0dcc8ccd8e86de79f574cba5 WHIRLPOOL e086afbe604905bdc024a1ce7503644285fdb394a168b6049e44751c64cdf51ba9e036a32f568d749252ad537fe9f874eadb8aea92de580f9c93a9d91a6ef457
+DIST libssh-0.6.5-compilefix.patch 668 SHA256 90eb8bd3e31c4df5a5aa40d4e0d440c290190be8524396c979dc2fe5005c9b61 SHA512 8ade351e6499922bc983cfb1b7042a8eca4322b64a5fd1eb9d4afc0baba311f0af970dc3f43b864d510d3a4668f58e83e6214a6e90ddbf4199ab9fea6c73d036 WHIRLPOOL d65f3505eae97feb16f5b0cdfc83a6638dcdca2916facedd05b9987797b72231725c0834355048e48bc38413ad1b9c718cfbdad410fbd13573b38c919ccbac0b
+DIST libssh-0.6.5.tar.xz 281564 SHA256 0fd52763e033d5e9b1cd55f60a74e619731c5ba630938eec95682dbe4cf7dc2c SHA512 55d614ff311a29a20b93094ac1dd16a2ad1345368b874a0e385f0c235e8defde8816948ab04eab68ade477a0a6901b317c7884df1ba3078cf12db89dfc4169cc WHIRLPOOL 9801eee45a178306b0645d75c268df381d206a8c566695d8b6c228ea7f5638a313bdbdf990ad7bd299c24d280595007b44fd16449ee3a0643b6e2084bb148d09
 EBUILD libssh-0.6.4.ebuild 2552 SHA256 5a8d965fa9ec78752c52e7c62ca5e13f1dde595de790b7a237aed78d16aca429 SHA512 801347ae58bb73e755676ca031c8419cc8ba3a46bafcfe253631f5144ee3d8005c990d8cd92fdff54edb4f64a5ceca84e161f3a0edee6a8f39d663874ab8cd20 WHIRLPOOL d099722b1aeda44f98b0f04117e73c49751d74441d4cc5911ca38cac6fd6e953cfd6c1b2cfe6ba2aeef634a16b49486c96383486c92ece5a5e47f8e7ac82be11
+EBUILD libssh-0.6.5.ebuild 2549 SHA256 b1b7c8c6795a9d45e7cb737820e9506f274fa4e495c8beeb4af2535db92af132 SHA512 4294a250d0240bc20f0049747eb37bac394fa60b04634eb6ba451334588fb885d47a7a5169d69095facde37307230a93fe2bd72a6eaf242c8c9a35fdc928aa47 WHIRLPOOL 96e569b0f1ff63f5cf5a6e6df2427a740f1c878fafb8053169b2eee9942dfea640e89b5b0143fdbb2a78825638699dad314714646201676edf279895485e55ee
 EBUILD libssh-9999.ebuild 2165 SHA256 19217cf4a65823f37239ed541e83e6ec8ded43668fe7bb6bdb0fe3900de22009 SHA512 92222628c3851d025bc645ced70092687af28c1f264621d3ac230e87d4b2269f8e09838f1cafd53191457fbab4b8e683914f25213c46dd673e012d2c36d23665 WHIRLPOOL c2dd2212aaef30e06abec149f8e4cc661998feb89c4eeafad6b67ea37ccce597e907fd1bcd02a9d27dca8febf0eeaf9c5c4edaa81f6566c2603131f52e13edbf
-MISC ChangeLog 17203 SHA256 02483e82bb577c77961f8a17c53ff314f4f58aa96a958f983ae47a0c8a4b5b38 SHA512 d10064a3f1df31b9ef7ac4d4f7e59b067659e6b3e09ca72996de428e3fbec32d599830b1365bfe42345f861655176d402940b873dc8d5c32beca7bcf3ad4a445 WHIRLPOOL 4ffee7cf8a1556a35e3226a11fcd7ea3e6cc408e5742dc9bb07121d0e0f059fead6ad16c02340148de9a9a4b8634f0e676d7c48362ceedce23030a307e4f7bbb
+MISC ChangeLog 17349 SHA256 3f647a3d13e95849c043b8ee40861d03e32d73f6d022649936bbef0825ec4a85 SHA512 f4a7fe5327c0c7336e6d98992ed76d47c9925d7deb18b3ca3d3e4b6979f05b7ae5df064414c2aae7fc0a7b596ffbb9e98468e27fce53ddecf6f43cebbfa5ab77 WHIRLPOOL 128fbbc6629b1648d8a25ae86348b67a8015b91226655419d2443cb66d27e48ef6bdf4faed31395675dc2b7e98dba6e7484131dff90a30a2a2c78283a8a3b330
 MISC metadata.xml 577 SHA256 fe4b1a79301454baa0772dd181ad10ea5f835a904d1eb71c94890bd276891116 SHA512 dcd1badfa0be8068167dd095631366e968046fba7e5f62851f2f7c463ba8c8af427ec487abff41c236f269fdfd376f5716e4ffa4a5042f2ab82bc5bdb85b21e6 WHIRLPOOL e9731fd1b62a2d0d5836420585f8a31f11bb6f5e3ff12d9853ccb66321dd63642bddb1f128e117ebd1f7f58209f17a98f14c8b7e9c1e1b091c6ab668595ac524
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUdbLcACgkQVWmRsqeSphNQGgCdEiylBwIGKHgu1OFZIoWm0sv6
-/7MAn3IPi7rFFpDOstLBMwxYbOicIKg3
-=4Vys
+iQIcBAEBCAAGBQJVSzIOAAoJEPiazRVxLXTF28oQAItc+87tY+WJx0Bmx4mKBufR
+OFQWu5yr3UU39eo2gzGCcPJ7uiQeCudA4d9i76Z81GHVdPUQ8lyi+frzn7606JKZ
+xQTFPFGoocc40vJPU7Ckv/M6gePs1kbaLebsLOArvQCa3lTmptXWhi2ikg2Rq4ue
+jhd1oxSo/W+95clfh+ZJROc5fVJUVxK1c7FlWT7HPpIsWWXmQhQJqPSbd3ayW5Pf
+Dq2GndZqXC594G6/dVG2l1PV+SDubUk7Oghk19sYltZPJPERv6DXKhkE+SW9fI4E
+yhMeZk85uQfsqfJNmkVw37WBPoyHrUh//aJvYeot34SO63bIMWCVXJDYAqhM3qoS
+YHfIrnSWBR6ExxISUjASgN8WrRY1h55yrgGdjaWnILiRr+/qRKDI+QrBcWw+vQU4
+wdJ2qOqYL+p07PRpcs62dO8HfsFTaLBmWhfYqa19qczh1aoHGY4qySXa3Bbw9YNP
+zk6Y5k4zY3MvuxiA9OrePLPZ0fVOTI/VLveVc8kOWBsLtoaVDb20BV07RQJbXS86
+euKRBG/TyILOPArkSDjfS7KkCwN+TgkmvN9TbH5Rcj6QaeCQI39V2rBc+7kfbETQ
+2CP0MBaoWvljCjqwIDzgaiuhJmPV/QXTeIZUq477+9dH8BeCz25/m0i3c5ROr0I+
+GKGcQhzlHY9zR3R7X/wO
+=11hC
 -----END PGP SIGNATURE-----
